# nanobot-channel-vk

./: .gitignore  README.md  pyproject.toml
nanobot_channel_vk/: __init__.py  plugin.py
nanobot_channel_vk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
